examples/test/testpolicy18766.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18766
  namespace: namespace64
spec:
  podSelector:
    matchLabels:
      key32: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value1
          key44: value15
          key34: value22
      podSelector:
        matchLabels:
          key39: value46
          key36: value43
          key48: value26
